[package]
name = "electrum-sdk"
version = "0.1.0"
edition = "2021"
description = "Bitcoin Electrum client library. Supports plaintext, TLS and Onion servers."
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage = "https://github.com/yukibtc/electrum-client-sdk"
repository = "https://github.com/yukibtc/electrum-client-sdk.git"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "electrum"]

[features]
default = []

[dependencies]
async-utility = "0.1"
bitcoin = { version = "0.29", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "time", "macros", "sync"] }
tokio-rustls = "0.24"
tokio-socks = "0.5"
webpki = "0.22"
webpki-roots = "0.23"

[dev-dependencies]
env_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
